fixed footer overlapping

--- a/src/components/auth/admin/adminDashboard/AdminDashboard.module.css
+++ b/src/components/auth/admin/adminDashboard/AdminDashboard.module.css
@@ -1,7 +1,6 @@
 .dashboardContainer {
     display: flex;
     flex-direction: column;
-    height: 100vh;
 }
 
 .nav {
@@ -13,6 +12,7 @@
     display: flex;
     list-style-type: none;
     padding: 0;
+    justify-content: space-evenly;
 }
 
 .navList li {
